# ai-english-teacher

./: .gitignore  Get_started_LiveAPI_NativeAudio.py  Makefile  README.md  app.py  data  data_parser.py  play_kokoro.py  pyproject.toml  test.py
